--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <a href="page2.html">Go to Page 2</a>
+    <a href="first try">Go to Page 2</a>
 </body>
 </html>
