--- a/first try.html
+++ b/first try.html
@@ -6,7 +6,7 @@
     <title>Do you like me?</title>
     <style>
         #response {
-            display: none; /* 初始状态隐藏 */
+            display: none;
             text-align: center;
             margin-top: 20px;
         }
@@ -14,8 +14,8 @@
     <script>
         function showResponse(event) {
             event.preventDefault(); // 阻止表单默认跳转行为
-            document.getElementById("form-container").style.display = "none"; // 隐藏表单
-            document.getElementById("response").style.display = "block"; // 显示回复内容
+            document.getElementById("form-container").style.display = "none";
+            document.getElementById("response").style.display = "block";
         }
     </script>
 </head>
