--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <a href="first try">Click here!</a>
+    <a href="first try.html">Click here!</a>
 </body>
 </html>
