--- a/first try.html
+++ b/first try.html
@@ -29,7 +29,7 @@
             <br><br>
             <label>DO YOU LIKE ME?</label>
             <br>
-            <img src="do u like me.jpg" alt="Do you like me?" width="300">
+            <img src="image/Do_u_like _me.jpg" alt="Do you like me?" width="300">
             <br><br>
             <input type="radio" name="answer" value="yes" required> YES!
             <input type="radio" name="answer" value="yes"> YES!
