--- a/first try.html
+++ b/first try.html
@@ -29,7 +29,7 @@
             <br><br>
             <label>DO YOU LIKE ME?</label>
             <br>
-             <a href="https://summer77-paw.github.io/ye/do_u_like_me.jpg"></a>
+            <img src="do_u_like_me.jpg" alt="Do you like me?" width="300" loading="lazy">
             <br><br>
             <input type="radio" name="answer" value="yes" required> YES!
             <input type="radio" name="answer" value="yes"> YES!
